ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: ct-cip
            port:
              number: 80
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: php-cip
            port:
              number: 80
